<resources>
    <string name="app_name">Android_Calculator</string>
    <string name="app_description">Android ATC Caclulator</string>
    <string name="num1_hint">Enter The First Number</string>
    <string name="num2_hint">Enter The Second Number</string>
    <string name="sign_plus">+</string>
    <string name="sign_minus">-</string>
    <string name="sign_multiply">*</string>
    <string name="sign_divide">/</string>
</resources>
